--- a/index.html
+++ b/index.html
@@ -97,16 +97,21 @@
 
     .badge-col { padding-left: 15px; flex-grow: 1; display: flex; align-items: center; }
 
-    /* Лінія кружечків. space-between гарантує, що перший і останній будуть біля хатинок */
-    .tl-body { display: flex; align-items: stretch; min-height: 48px; margin-top: -3px; margin-bottom: -3px; position: relative; z-index: 1; }
-    .line-node { display: flex; flex-direction: column; align-items: center; justify-content: space-between; width: 36px; flex-shrink: 0; padding: 4px 0; }
+        /* Тіло таймлайну повертаємо в нормальний стан (текст буде строго по центру) */
+    .tl-body { display: flex; align-items: stretch; min-height: 52px; position: relative; z-index: 1; }
+    
+    /* Магія переїхала сюди: негативні відступи тягнуть ТІЛЬКИ кружечки до хатинок, не чіпаючи текст */
+    .line-node { display: flex; flex-direction: column; align-items: center; justify-content: space-between; width: 36px; flex-shrink: 0; padding: 0; margin-top: -12px; margin-bottom: -12px; }
 
     .tl-dot-micro { width: 5px; height: 5px; border-radius: 50%; opacity: 0.8; }
     .tl-dot-micro.on { background: var(--c-yellow); box-shadow: 0 0 3px rgba(251, 191, 36, 0.4); }
     .tl-dot-micro.off { background: #555; }
 
-    .interval-col { padding-left: 15px; flex-grow: 1; display: flex; align-items: center; height: 100%; }
+    .interval-col { padding-left: 15px; flex-grow: 1; display: flex; align-items: center; }
     
+    /* Іконки прибиті до тексту намертво */
+    .interval { display: flex; align-items: center; gap: 8px; font-size: 16px; font-weight: 600; line-height: 1; }
+
     /* Іконки прибиті до тексту намертво */
     .interval { display: flex; align-items: center; gap: 8px; font-size: 16px; font-weight: 600; line-height: 1; }
     .interval-icon { display: flex; align-items: center; justify-content: center; width: 16px; height: 16px; flex-shrink: 0; }
