--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 textInts.push(`${getClockEmoji(int.startStr)} ${t}${(int.type==='on')?" (аварійне ⚠️)":""}`);
             }
         });
-        document.getElementById('finalText').textContent = `**ГРАФІК ВІДКЛЮЧЕНЬ [${lastDateStr}]**\n\n${textInts.join('\n')}\n\n⚡️ Інтерактивний графік: t.me/valkyelectrifybot/electric\n\n💬 Чат: t.me/valkychat\n📣 Базарчик: t.me/valkybazar`;
+        document.getElementById('finalText').textContent = `💡⚡️ ГРАФІК ВІДКЛЮЧЕНЬ ${lastDateStr}\n\n${textInts.join('\n')}\n\n📱🆕 Динамічний онлайн-графік в нашому міні-додатку: t.me/valkyelectrifybot/electric\n\n💬 Чат: t.me/valkychat\n📣 Базарчик: t.me/valkybazar`;
     }
 
     function injectEmergency() {
